@@ -8,6 +8,7 @@ versions of PyAMF.
 
 0.5 (unreleased)
 ----------------
+ - Added support for property types on SQLAlchemy mapped classes. (Ticket:491)
 
 0.4.1 (2009-02-23)
 ------------------
